--- a/src/containers/projects/Project.scss
+++ b/src/containers/projects/Project.scss
@@ -86,6 +86,17 @@ p {
   padding: 0 1rem;
 }
 
+.project-category {
+  margin-bottom: 3rem;
+}
+
+.category-title {
+  font-size: 28px;
+  margin-bottom: 1rem;
+  font-weight: 600;
+  border-left: 6px solid #55198b;
+  padding-left: 12px;
+}
 
 
 /* Responsive adjustments */
