removing dark mode for now

--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -3,8 +3,8 @@ Certain colors are used for different and multiply types of elements.
 For greater control over colors visit each components .scss file. */
 
 // button colors
-$buttonColor: #f1c065;
-$buttonHover: #e7af6f;
+$buttonColor: #3b5998;
+$buttonHover: #6aa4e6;
 $topButtonHover: #000;
 
 // text colors light theme
@@ -94,7 +94,7 @@ $iconBackground: #333;
 $appHeaderBG: #282c34;
 
 // misc colors
-$skillsColor: #645beb;
+$skillsColor: #fea74f;
 $appLink: #09d3ac;
 
 // social media icons
