--- a/src/containers/splashScreen/SplashScreen.css
+++ b/src/containers/splashScreen/SplashScreen.css
@@ -10,6 +10,12 @@
   height: 50vh;
 }
 
+.splash-image {
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
+}
+
 .splash-title-container {
   font-size: 2.5rem;
   text-decoration: none;
