changed resume download name and other misc

--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -70,11 +70,11 @@
   margin: 0;
   color: $lightBackground1;
   font-size: 25px;
-  text-align: center;
   font-weight: 700;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
+  /* Allow company name to wrap and display fully */
+  white-space: normal;
+  overflow: visible;
+  text-overflow: unset;
 }
 
 .experience-roundedimg {
