--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -61,6 +61,7 @@
 }
 
 .header .logo-name {
+  color: orange;
   font-family: "Agustina Regular";
   font-weight: bold;
   font-variant-ligatures: no-common-ligatures;
